[gd_scene load_steps=20 format=3 uid="uid://dc4i8fxnj56tx"]

[ext_resource type="Script" path="res://scripts/dialogue_ui.gd" id="1_dhjqm"]
[ext_resource type="Theme" uid="uid://dn7uhmqeylu42" path="res://misc/ui.theme" id="2_6his5"]
[ext_resource type="Texture2D" uid="uid://1njfwqylf3dh" path="res://graphics/ui/dialogue/dialogue_player.png" id="2_xsste"]
[ext_resource type="Texture2D" uid="uid://cwu13bh1n30ur" path="res://graphics/ui/dialogue/bg/bg0000.png" id="3_dbyjx"]
[ext_resource type="Texture2D" uid="uid://ctbu88ow43uj8" path="res://graphics/ui/dialogue/newcall/newcall0000.png" id="3_jkvdk"]
[ext_resource type="Texture2D" uid="uid://bo2hptmcowhqy" path="res://graphics/ui/dialogue/dialogue_other.png" id="4_8m64x"]
[ext_resource type="Texture2D" uid="uid://d0ipbbuitgqcl" path="res://graphics/ui/dialogue/newcall/newcall0001.png" id="4_hjslq"]
[ext_resource type="Texture2D" uid="uid://41lne780bh28" path="res://graphics/ui/dialogue/bg/bg0001.png" id="4_tk6dd"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="5_gn1ah"]
[ext_resource type="Texture2D" uid="uid://b0651j71hhfsc" path="res://graphics/ui/dialogue/newcall/newcall0002.png" id="5_gttwe"]
[ext_resource type="Texture2D" uid="uid://qy10atxowm2y" path="res://graphics/ui/dialogue/newcall/newcall0003.png" id="6_25ud5"]
[ext_resource type="Texture2D" uid="uid://gc41rw5p7l6m" path="res://graphics/ui/dialogue/newcall/newcall0004.png" id="7_snxqd"]
[ext_resource type="Texture2D" uid="uid://lb6svmvv27t1" path="res://graphics/ui/dialogue/tip/tip0000.png" id="8_vxfig"]
[ext_resource type="Texture2D" uid="uid://chalgpvxgvc06" path="res://graphics/ui/dialogue/newcall/newcall0005.png" id="8_yvcc7"]
[ext_resource type="Texture2D" uid="uid://bh1lvjke7tnkx" path="res://graphics/ui/dialogue/tip/tip0001.png" id="9_oudjb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0raq"]
bg_color = Color(0, 0, 0, 0.25098)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_gwvkh"]
frames = 2
frame_0/texture = ExtResource("3_dbyjx")
frame_0/duration = 0.25
frame_1/texture = ExtResource("4_tk6dd")
frame_1/duration = 0.25

[sub_resource type="AnimatedTexture" id="AnimatedTexture_ba6v7"]
frames = 2
frame_0/texture = ExtResource("8_vxfig")
frame_0/duration = 0.25
frame_1/texture = ExtResource("9_oudjb")
frame_1/duration = 0.25

[sub_resource type="SpriteFrames" id="SpriteFrames_2e8bq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jkvdk")
}, {
"duration": 1.0,
"texture": ExtResource("4_hjslq")
}, {
"duration": 1.0,
"texture": ExtResource("3_jkvdk")
}, {
"duration": 1.0,
"texture": ExtResource("4_hjslq")
}, {
"duration": 1.0,
"texture": ExtResource("3_jkvdk")
}, {
"duration": 1.0,
"texture": ExtResource("5_gttwe")
}, {
"duration": 1.0,
"texture": ExtResource("6_25ud5")
}, {
"duration": 1.0,
"texture": ExtResource("7_snxqd")
}, {
"duration": 1.0,
"texture": ExtResource("8_yvcc7")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[node name="DialogueUI" type="CanvasLayer"]
layer = 2
script = ExtResource("1_dhjqm")

[node name="BG" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q0raq")

[node name="C" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 240)
theme = ExtResource("2_6his5")

[node name="BG" type="TextureRect" parent="C"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_gwvkh")

[node name="TopIcon" type="TextureRect" parent="C"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015625
anchor_top = 0.00625
anchor_right = 0.215625
anchor_bottom = 0.272917
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_xsste")
metadata/_edit_use_anchors_ = true

[node name="BottomIcon" type="TextureRect" parent="C"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.764063
anchor_top = 0.739583
anchor_right = 0.964063
anchor_bottom = 1.00625
pivot_offset = Vector2(64, 64)
texture = ExtResource("4_8m64x")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Text" type="VBoxContainer" parent="C"]
layout_mode = 0
offset_left = 52.0
offset_top = 284.0
offset_right = 369.0
offset_bottom = 468.0
theme_override_constants/separation = -12

[node name="Name" type="Label" parent="C/Text"]
layout_mode = 2
theme_override_colors/font_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_font_sizes/font_size = 20
metadata/_edit_use_anchors_ = true

[node name="DialogueLabel" type="RichTextLabel" parent="C/Text"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -14
theme_override_font_sizes/normal_font_size = 19
script = ExtResource("5_gn1ah")
seconds_per_step = 0.03
pause_at_characters = ".?!,"
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")
metadata/_edit_use_anchors_ = true

[node name="Tip" type="TextureRect" parent="C"]
visible = false
layout_mode = 0
offset_left = 225.0
offset_top = 145.0
offset_right = 520.0
offset_bottom = 362.0
texture = SubResource("AnimatedTexture_ba6v7")

[node name="Label" type="Label" parent="C/Tip"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.267797
anchor_top = 0.327189
anchor_right = 0.789831
anchor_bottom = 0.635945
rotation = -0.120428
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -12
text = "press left mouse
button or space
to continue!"
metadata/_edit_use_anchors_ = true

[node name="CallSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_2e8bq")
centered = false

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="finished_typing" from="C/Text/DialogueLabel" to="." method="_on_dialogue_finished_typing"]
[connection signal="timeout" from="DialogueTimer" to="." method="_on_dialogue_timer_timeout"]
